# ugains

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: index.html
ugains/: __main__.py
ugains/callbacks/: fit_summarize_callback.py
ugains/conf/: config.yaml
ugains/conf/callbacks/: callbacks.yaml
ugains/conf/datamodule/: cityfishy.yaml
ugains/conf/hydra/: default.yaml
ugains/conf/logger/: csv.yaml
ugains/conf/loss/: mask2former.yaml
ugains/conf/metrics/: iou.yaml
ugains/conf/model/: sam_sampling.yaml
ugains/conf/optimizer/: adamw.yaml
ugains/conf/scheduler/: constant.yaml
ugains/conf/trainer/: default.yaml  trainer.yaml
ugains/datamodules/: cityfishy_datamodule.py
ugains/datamodules/datasets/: cityscapes.py  fishyscapes_lost_found.py
ugains/metrics/: confusionmatrix.py  instance.py  iou_metrics.py  ood.py
ugains/models/: sam_sampling.py  sampler.py
ugains/models/mask2former/: mask2former_transformer_decoder.py  maskformer_loss.py  matcher.py  swin.py
ugains/models/mask2former/pixel_decoder/: msdeformattn.py  position_encoding.py
ugains/models/mask2former/pixel_decoder/ops/: test.py
ugains/models/mask2former/pixel_decoder/ops/functions/: ms_deform_attn_func.py
ugains/models/mask2former/pixel_decoder/ops/modules/: ms_deform_attn.py
ugains/models/segment_anything/: automatic_mask_generator.py  build_sam.py  predictor.py
ugains/models/segment_anything/modeling/: __init__.py  image_encoder.py  mask_decoder.py  mask_decoder_token.py  sam.py  transformer.py  vit.py
ugains/models/segment_anything/utils/: onnx.py
ugains/utils/: box_ops.py  comm.py  data_utils.py  misc.py  plot_utils.py  trainer_utils.py
